--- a/CreateJavaVariableDeclarations/nbproject/private/private.properties
+++ b/CreateJavaVariableDeclarations/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\dev2\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\Mordechai\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
